kubernetes/clusters/delta/apps/system-monitoring/kube-prometheus-stack/middleware.yaml
apiVersion: nginx.containo.us/v1alpha1
kind: Middleware
metadata:
  name: prometheus-basic-auth
  namespace: system-monitoring
spec:
  basicAuth:
    secret: prometheus-basic-auth
