kubernetes/clusters/delta/apps/system-monitoring/kube-prometheus-stack/ingress-route.yaml
#Workaround for external-dns https://github.com/kubernetes-sigs/external-dns/issues/1257#issuecomment-628638415
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: system-monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: prometheus.${EXTERNAL_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${EXTERNAL_DOMAIN}
spec:
  rules:
    - host: prometheus.${EXTERNAL_DOMAIN}
---
apiVersion: nginx.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: system-monitoring
spec:
  routes:
    - kind: Rule
      match: Host(`prometheus.${EXTERNAL_DOMAIN}`)
      middlewares:
        - name: prometheus-basic-auth
      services:
        - name: prometheus-prometheus
          port: 9090
